--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,78 +7,65 @@
     android:orientation="vertical"
     android:padding="@dimen/list_padding">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="10dp"
-        android:text="@string/app_name"
-        android:textColor="@color/white"
-        android:textSize="@dimen/headder"
-        android:textStyle="bold" />
-
-
-    <LinearLayout
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/main_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_marginTop="16dp"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        app:title="@string/app_name"
+        app:titleTextAppearance="@style/Toolbar.TitleText"
+        app:titleTextColor="@color/white" />
 
-        <Button
-            android:id="@+id/search_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:backgroundTint="@color/white"
-            android:text="@string/button_search"
-            android:textAllCaps="false"
-            android:textColor="@color/black"
-            android:textSize="@dimen/headder"
-            android:textStyle="bold"
-            app:cornerRadius="16dp"
-            app:icon="@drawable/baseline_search_24"
-            app:iconGravity="textStart"
-            app:iconPadding="10dp"
-            app:iconTint="@color/black" />
+    <Button
+        android:id="@+id/search_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:backgroundTint="@color/white"
+        android:text="@string/button_search"
+        android:textAllCaps="false"
+        android:textColor="@color/black"
+        android:textSize="@dimen/headder"
+        android:textStyle="bold"
+        app:cornerRadius="16dp"
+        app:icon="@drawable/baseline_search_24"
+        app:iconGravity="textStart"
+        app:iconPadding="10dp"
+        app:iconTint="@color/black" />
 
-        <Button
-            android:id="@+id/library_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:backgroundTint="@color/white"
-            android:foreground="?selectableItemBackground"
-            android:text="@string/button_library"
-            android:textAllCaps="false"
-            android:textColor="@color/black"
-            android:textSize="@dimen/headder"
-            android:textStyle="bold"
-            app:cornerRadius="16dp"
-            app:icon="@drawable/baseline_library_music_24"
-            app:iconGravity="textStart"
-            app:iconPadding="10dp"
-            app:iconTint="@color/black" />
+    <Button
+        android:id="@+id/library_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:backgroundTint="@color/white"
+        android:foreground="?selectableItemBackground"
+        android:text="@string/button_library"
+        android:textAllCaps="false"
+        android:textColor="@color/black"
+        android:textSize="@dimen/headder"
+        android:textStyle="bold"
+        app:cornerRadius="16dp"
+        app:icon="@drawable/baseline_library_music_24"
+        app:iconGravity="textStart"
+        app:iconPadding="10dp"
+        app:iconTint="@color/black" />
 
-        <Button
-            android:id="@+id/settings_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:backgroundTint="@color/white"
-            android:text="@string/button_settings"
-            android:textAllCaps="false"
-            android:textColor="@color/black"
-            android:textSize="@dimen/headder"
-            android:textStyle="bold"
-            app:cornerRadius="16dp"
-            app:icon="@drawable/ic_settings"
-            app:iconGravity="textStart"
-            app:iconPadding="10dp"
-            app:iconTint="@color/black" />
-
-
-    </LinearLayout>
+    <Button
+        android:id="@+id/settings_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:backgroundTint="@color/white"
+        android:text="@string/button_settings"
+        android:textAllCaps="false"
+        android:textColor="@color/black"
+        android:textSize="@dimen/headder"
+        android:textStyle="bold"
+        app:cornerRadius="16dp"
+        app:icon="@drawable/ic_settings"
+        app:iconGravity="textStart"
+        app:iconPadding="10dp"
+        app:iconTint="@color/black" />
 
 
 </LinearLayout>
