--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,69 +3,36 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blue"
+    android:theme="@style/Theme.PlaylistMaker"
     android:orientation="vertical"
     android:padding="@dimen/list_padding">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/main_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/Toolbar.TitleText"
         app:title="@string/app_name"
-        app:titleTextAppearance="@style/Toolbar.TitleText"
         app:titleTextColor="@color/white" />
 
     <Button
         android:id="@+id/search_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/MainButtonStyle"
         android:layout_weight="1"
-        android:backgroundTint="@color/white"
         android:text="@string/button_search"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        android:textSize="@dimen/headder"
-        android:textStyle="bold"
-        app:cornerRadius="16dp"
-        app:icon="@drawable/baseline_search_24"
-        app:iconGravity="textStart"
-        app:iconPadding="10dp"
-        app:iconTint="@color/black" />
+        app:icon="@drawable/baseline_search_24" />
 
     <Button
         android:id="@+id/library_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/MainButtonStyle"
         android:layout_weight="1"
-        android:backgroundTint="@color/white"
-        android:foreground="?selectableItemBackground"
         android:text="@string/button_library"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        android:textSize="@dimen/headder"
-        android:textStyle="bold"
-        app:cornerRadius="16dp"
-        app:icon="@drawable/baseline_library_music_24"
-        app:iconGravity="textStart"
-        app:iconPadding="10dp"
-        app:iconTint="@color/black" />
+        app:icon="@drawable/baseline_library_music_24" />
 
     <Button
         android:id="@+id/settings_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/MainButtonStyle"
         android:layout_weight="1"
-        android:backgroundTint="@color/white"
         android:text="@string/button_settings"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        android:textSize="@dimen/headder"
-        android:textStyle="bold"
-        app:cornerRadius="16dp"
-        app:icon="@drawable/ic_settings"
-        app:iconGravity="textStart"
-        app:iconPadding="10dp"
-        app:iconTint="@color/black" />
+        app:icon="@drawable/ic_settings" />
 
 
 </LinearLayout>
