--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,15 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:theme="@style/Theme.PlaylistMaker"
     android:orientation="vertical"
-    android:padding="@dimen/list_padding">
+    android:padding="@dimen/list_padding"
+    android:theme="@style/Theme.PlaylistMaker">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/main_toolbar"
-        style="@style/Toolbar.TitleText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:title="@string/app_name"
-        app:titleTextColor="@color/white" />
+        app:titleTextColor="@color/white"
+        />
 
     <Button
         android:id="@+id/search_button"
