--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -8,6 +8,7 @@
         <item name="android:textSize">@dimen/headder</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textFontWeight">500</item>
+       <item name="navigationIcon">@drawable/baseline_arrow_back_24_night</item>
     </style>
 
     <style name="MainButtonStyle" parent="Widget.MaterialComponents.Button">
@@ -26,7 +27,7 @@
         <item name="iconTint">@color/black</item>
     </style>
 
-    <style name="SettingsTextViewstyle">
+    <style name="SettingsTextViewStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:paddingHorizontal">16dp</item>
@@ -38,7 +39,7 @@
         <item name="drawableTint">@color/white</item>
     </style>
 
-    <style name="SwichStyle">
+    <style name="SwitchStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center_vertical</item>
@@ -50,5 +51,23 @@
         <item name="android:textFontWeight">400</item>
         <item name="thumbTint">@color/switch_thumb_color</item>
         <item name="trackTint">@color/switch_track_color</item>
+    </style>
+
+
+    <style name="EditTextStyle">
+        <item name="android:layout_marginStart">@dimen/list_padding</item>
+        <item name="android:layout_marginEnd">@dimen/list_padding</item>
+        <item name="android:background">@drawable/rounded_edittext</item>
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:drawableStart">@drawable/baseline_search_24</item>
+        <item name="android:drawablePadding">@dimen/small</item>
+        <item name="android:drawableTint">@color/black</item>
+        <item name="android:padding">@dimen/small</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHint">@color/black</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:textSize">16sp</item>
+
     </style>
 </resources>
