--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,11 +4,12 @@
     <style name="Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/headder</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textFontWeight">500</item>
         <item name="navigationIcon">@drawable/baseline_arrow_back_24</item>
+
     </style>
 
     <style name="MainButtonStyle" parent="Widget.MaterialComponents.Button">
@@ -27,7 +28,7 @@
         <item name="iconTint">@color/black</item>
     </style>
 
-    <style name="SettingsTextViewstyle">
+    <style name="SettingsTextViewStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:paddingHorizontal">16dp</item>
@@ -42,7 +43,6 @@
     <style name="SwichStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:gravity">center_vertical</item>
         <item name="android:paddingHorizontal">16dp</item>
         <item name="android:paddingVertical">20dp</item>
         <item name="android:textSize">16sp</item>
@@ -52,4 +52,21 @@
         <item name="thumbTint">@color/switch_thumb_color</item>
         <item name="trackTint">@color/switch_track_color</item>
     </style>
-</resources>
+
+    <style name="EditTextStyle">
+       <item name="android:layout_marginStart">@dimen/list_padding</item>
+        <item name="android:layout_marginEnd">@dimen/list_padding</item>
+        <item name="android:background">@drawable/rounded_edittext</item>
+        <item name="android:drawableStart">@drawable/baseline_search_24</item>
+        <item name="android:drawablePadding">@dimen/small</item>
+        <item name="android:drawableTint">@color/grey</item>
+        <item name="android:padding">@dimen/small</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHint">@color/grey</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:textSize">16sp</item>
+
+    </style>
+
+    </resources>
