--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -11,7 +11,7 @@
        <item name="navigationIcon">@drawable/baseline_arrow_back_24_night</item>
     </style>
 
-    <style name="MainButtonStyle" parent="Widget.MaterialComponents.Button">
+    <style name="MainButtonStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:backgroundTint">@color/white</item>
@@ -55,9 +55,6 @@
 
 
     <style name="EditTextStyle">
-        <item name="android:layout_marginStart">@dimen/list_padding</item>
-        <item name="android:layout_marginEnd">@dimen/list_padding</item>
-        <item name="android:background">@drawable/rounded_edittext</item>
         <item name="android:backgroundTint">@color/white</item>
         <item name="android:drawableStart">@drawable/baseline_search_24</item>
         <item name="android:drawablePadding">@dimen/small</item>
