--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,7 +12,7 @@
 
     </style>
 
-    <style name="MainButtonStyle" parent="Widget.MaterialComponents.Button">
+    <style name="MainButtonStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:backgroundTint">@color/white</item>
@@ -54,9 +54,7 @@
     </style>
 
     <style name="EditTextStyle">
-       <item name="android:layout_marginStart">@dimen/list_padding</item>
-        <item name="android:layout_marginEnd">@dimen/list_padding</item>
-        <item name="android:background">@drawable/rounded_edittext</item>
+        <item name="android:backgroundTint">@color/light_grey</item>
         <item name="android:drawableStart">@drawable/baseline_search_24</item>
         <item name="android:drawablePadding">@dimen/small</item>
         <item name="android:drawableTint">@color/grey</item>
