--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -3,7 +3,8 @@
 
     <style name="Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_height">56dp</item>
+        <item name="android:layout_gravity">center_vertical</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">@dimen/headder</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
@@ -29,7 +30,7 @@
 
     <style name="SettingsTextViewStyle">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_height">61dp</item>
         <item name="android:paddingHorizontal">16dp</item>
         <item name="android:paddingVertical">20dp</item>
         <item name="android:textSize">16sp</item>
@@ -41,30 +42,42 @@
 
     <style name="SwitchStyle">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_height">61dp</item>
         <item name="android:gravity">center_vertical</item>
+        <item name="android:layout_marginTop">24dp</item>
         <item name="android:paddingHorizontal">16dp</item>
-        <item name="android:paddingVertical">20dp</item>
-        <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:fontFamily">@font/ys_display_regular</item>
-        <item name="android:textFontWeight">400</item>
+        <item name="android:paddingVertical">21dp</item>
         <item name="thumbTint">@color/switch_thumb_color</item>
         <item name="trackTint">@color/switch_track_color</item>
     </style>
 
-
     <style name="EditTextStyle">
         <item name="android:backgroundTint">@color/white</item>
         <item name="android:drawableStart">@drawable/baseline_search_24</item>
-        <item name="android:drawablePadding">@dimen/small</item>
+        <item name="android:drawablePadding">@dimen/small_padding</item>
         <item name="android:drawableTint">@color/black</item>
-        <item name="android:padding">@dimen/small</item>
+        <item name="android:padding">@dimen/small_padding</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textColorHint">@color/black</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textFontWeight">400</item>
         <item name="android:textSize">16sp</item>
-
     </style>
+
+    <style name="ClearIconStyle">
+        <item name="android:layout_marginTop">@dimen/margin_top</item>
+        <item name="android:layout_marginLeft">@dimen/small_padding</item>
+        <item name="android:layout_marginRight">@dimen/small_padding</item>
+        <item name="android:layout_gravity">end</item>
+        <item name="android:src">@drawable/baseline_clear_24</item>
+        <item name="android:drawableTint">@color/black</item>
+    </style>
+
+    <style name="SwitchTextAppearance">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textFontWeight">400</item>
+    </style>
+
 </resources>
