--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,9 @@
 <resources>
     <dimen name="headder">22sp</dimen>
     <dimen name="settings">16sp</dimen>
-    <dimen name="small">12sp</dimen>
+    <dimen name="small_text">12sp</dimen>
+    <dimen name="small_margin">8dp</dimen>
+    <dimen name="small_padding">12dp</dimen>
+    <dimen name="margin_top">10dp</dimen>
     <dimen name="list_padding">16dp</dimen>
 </resources>
