--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,8 @@
 
     <style name="Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_height">56dp</item>
+        <item name="android:layout_gravity">center_vertical</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/headder</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
@@ -14,7 +15,7 @@
 
     <style name="MainButtonStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_height">61dp</item>
         <item name="android:backgroundTint">@color/white</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textSize">@dimen/headder</item>
@@ -43,12 +44,9 @@
     <style name="SwichStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">24dp</item>
         <item name="android:paddingHorizontal">16dp</item>
-        <item name="android:paddingVertical">20dp</item>
-        <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/black</item>
-        <item name="android:fontFamily">@font/ys_display_regular</item>
-        <item name="android:textFontWeight">400</item>
+        <item name="android:paddingVertical">21dp</item>
         <item name="thumbTint">@color/switch_thumb_color</item>
         <item name="trackTint">@color/switch_track_color</item>
     </style>
@@ -56,15 +54,31 @@
     <style name="EditTextStyle">
         <item name="android:backgroundTint">@color/light_grey</item>
         <item name="android:drawableStart">@drawable/baseline_search_24</item>
-        <item name="android:drawablePadding">@dimen/small</item>
+        <item name="android:drawablePadding">@dimen/small_padding</item>
         <item name="android:drawableTint">@color/grey</item>
-        <item name="android:padding">@dimen/small</item>
+        <item name="android:padding">@dimen/small_padding</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textColorHint">@color/grey</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textFontWeight">400</item>
         <item name="android:textSize">16sp</item>
 
+    </style>
+    
+    <style name="ClearIconStyle">
+        <item name="android:layout_marginTop">@dimen/margin_top</item>
+        <item name="android:layout_marginLeft">@dimen/small_padding</item>
+        <item name="android:layout_marginRight">@dimen/small_padding</item>
+        <item name="android:layout_gravity">end</item>
+        <item name="android:src">@drawable/baseline_clear_24_grey</item>
+        <item name="android:drawableTint">@color/grey</item>
+    </style>
+
+    <style name="SwitchTextAppearance">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textFontWeight">400</item>
     </style>
 
     </resources>
