--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -31,8 +31,8 @@
     <style name="SettingsTextViewStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">61dp</item>
+        <item name="android:gravity">center_vertical</item>
         <item name="android:paddingHorizontal">16dp</item>
-        <item name="android:paddingVertical">20dp</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
@@ -44,9 +44,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">61dp</item>
         <item name="android:gravity">center_vertical</item>
-        <item name="android:layout_marginTop">24dp</item>
         <item name="android:paddingHorizontal">16dp</item>
-        <item name="android:paddingVertical">21dp</item>
         <item name="thumbTint">@color/switch_thumb_color</item>
         <item name="trackTint">@color/switch_track_color</item>
     </style>
@@ -56,7 +54,7 @@
         <item name="android:drawableStart">@drawable/baseline_search_24</item>
         <item name="android:drawablePadding">@dimen/small_padding</item>
         <item name="android:drawableTint">@color/black</item>
-        <item name="android:padding">@dimen/small_padding</item>
+        <item name="android:paddingStart">@dimen/small_padding</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textColorHint">@color/black</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
@@ -65,10 +63,8 @@
     </style>
 
     <style name="ClearIconStyle">
-        <item name="android:layout_marginTop">@dimen/margin_top</item>
-        <item name="android:layout_marginLeft">@dimen/small_padding</item>
-        <item name="android:layout_marginRight">@dimen/small_padding</item>
-        <item name="android:layout_gravity">end</item>
+        <item name="android:paddingEnd">@dimen/small_padding</item>
+        <item name="android:layout_gravity">end|center_vertical</item>
         <item name="android:src">@drawable/baseline_clear_24</item>
         <item name="android:drawableTint">@color/black</item>
     </style>
