--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -76,4 +76,23 @@
         <item name="android:textFontWeight">400</item>
     </style>
 
+    <style name="TrackArtistAndTimeText">
+        <item name="android:textSize">11sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textFontWeight">400</item>
+    </style>
+
+    <style name="DotDividerImageStyle">
+        <item name="android:src">@drawable/ellipse_1_white</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:ellipsize">end</item>
+    </style>
+
+    <style name="ForwardIconStyle">
+        <item name="android:src">@drawable/vector_white</item>
+        <item name="android:layout_gravity">end|center_vertical</item>
+
+    </style>
+
 </resources>
