--- a/app/src/main/res/color/switch_track_color.xml
+++ b/app/src/main/res/color/switch_track_color.xml
@@ -2,6 +2,6 @@
 
     <selector xmlns:android="http://schemas.android.com/apk/res/android">
         <item android:state_checked="true"
-            android:color = "@color/light_blue"/>
-        <item android:color="@color/light_grey"/>
+            android:color = "@color/switch_track_active_dark"/>
+        <item android:color="@color/switch_track_inactive"/>
     </selector>
