--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,18 +7,16 @@
     android:paddingStart="@dimen/list_padding"
     android:paddingEnd="@dimen/list_padding"
     android:paddingBottom="28dp"
-    android:theme="@style/Theme.PlaylistMaker">
+    android:theme="@style/Theme.PlaylistMaker.Mainscreen">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/main_toolbar"
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:layout_marginBottom="24dp"
-        android:paddingStart="@dimen/small_padding"
         android:paddingTop="@dimen/margin_top"
         app:title="@string/app_name"
-        app:titleTextColor="@color/white"
-        />
+        app:titleTextColor="@color/white" />
 
     <Button
         android:id="@+id/search_button"
