--- a/app/src/main/res/layout/track_view.xml
+++ b/app/src/main/res/layout/track_view.xml
@@ -4,25 +4,23 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+   >
 
     <ImageView
         android:id="@+id/track_image"
-        android:layout_width="0dp"
+        android:layout_width="45dp"
         android:layout_height="45dp"
-        android:layout_gravity="center|start"
         android:layout_marginStart="13dp"
         android:layout_marginTop="@dimen/small_margin"
-        android:layout_marginBottom="@dimen/small_margin"
-        android:layout_weight="1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginBottom="@dimen/small_margin"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/small_margin"
-        android:layout_weight="4">
+        android:layout_weight="4"
+        >
 
         <TextView
             android:id="@+id/track_name"
@@ -78,8 +76,8 @@
     <ImageView
         android:id="@+id/track_details"
         style="@style/ForwardIconStyle"
-        android:layout_width="0dp"
-        android:layout_height="24dp"
-        android:layout_marginEnd="@dimen/small_padding"
-        android:layout_weight="1" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="20dp"/>
 </LinearLayout>
