--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -9,7 +9,7 @@
         <item name="android:textSize">@dimen/headder</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textFontWeight">500</item>
-       <item name="navigationIcon">@drawable/baseline_arrow_back_24_night</item>
+        <item name="navigationIcon">@drawable/baseline_arrow_back_24_night</item>
     </style>
 
     <style name="MainButtonStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
@@ -45,8 +45,6 @@
         <item name="android:layout_height">61dp</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:paddingHorizontal">16dp</item>
-        <item name="thumbTint">@color/switch_thumb_color</item>
-        <item name="trackTint">@color/switch_track_color</item>
     </style>
 
     <style name="EditTextStyle">
@@ -90,7 +88,7 @@
     </style>
 
     <style name="ForwardIconStyle">
-        <item name="android:src">@drawable/vector_white</item>
+        <item name="android:src">@drawable/ic_right_arrow_dark</item>
         <item name="android:layout_gravity">end|center_vertical</item>
 
     </style>
