--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,13 @@
     <color name="blue">#3772E7</color>
     <color name="light_blue"> #9FBBF3</color>
     <color name="light_grey">#E6E8EB</color>
+    <color name="design_dark_default_color_background">#1A1B22</color>
+
+
+    <color name="switch_thumb_active_color">#3772E7</color>
+    <color name="switch_thumb_inactive_color">#AEAFB4</color>
+    <color name="switch_track_inactive">#E6E8EB</color>
+    <color name="switch_track_active_dark">#9FBBF3</color>
 
 
 </resources>
