--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -96,8 +96,34 @@
         <item name="android:src">@drawable/ic_right_arrow_light</item>
         <item name="android:layout_gravity">end|center_vertical</item>
         <item name="android:gravity">end|center_vertical</item>
-
     </style>
+
+    <style name="NotFoundIconStyle">
+        <item name="android:src">@drawable/not_find_light_mode</item>
+    </style>
+
+    <style name="NotFoundTextStyle">
+        <item name="android:text">@string/text_not_found</item>
+        <item name="android:textSize">19sp</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textFontWeight">400</item>
+    </style>
+    
+    <style name="ImageErrorStyle">
+        <item name="android:src">@drawable/error_light_mode</item>
+    </style>
+    
+    <style name="ButtonUpdateStyle">
+        <item name="android:backgroundTint">@color/black</item>
+        <item name="android:text">@string/button_update</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textFontWeight">500</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="cornerRadius">54dp</item>
+</style>
 
 
 </resources>
