Сохраняем выбраную тему приложения

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -21,7 +21,8 @@
         android:paddingStart="@dimen/list_padding"
         android:paddingEnd="@dimen/small_padding"
         android:text="@string/dark_theme"
-        android:textAppearance="@style/SwitchTextAppearance" />
+        android:textAppearance="@style/SwitchTextAppearance"
+        />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/settings_share"
