--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -82,6 +82,7 @@
         <item name="android:textFontWeight">400</item>
     </style>
 
+
     <style name="DotDividerImageStyle">
         <item name="android:src">@drawable/ellipse_1_white</item>
         <item name="android:maxLines">1</item>
@@ -118,6 +119,14 @@
         <item name="android:textFontWeight">500</item>
         <item name="android:textAllCaps">false</item>
         <item name="cornerRadius">54dp</item>
+    </style>
+
+    <style name="SearchHistoryTextStyle">
+        <item name="android:text">@string/search_history_text</item>
+        <item name="android:textSize">19sp</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textFontWeight">500</item>
     </style>
 
 
