--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -124,5 +124,13 @@
         <item name="cornerRadius">54dp</item>
 </style>
 
+    <style name="SearchHistoryTextStyle">
+        <item name="android:text">@string/search_history_text</item>
+        <item name="android:textSize">19sp</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textFontWeight">500</item>
+    </style>
+
 
 </resources>
